--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@contentful/rich-text-html-renderer": "^14.1.1",
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/google-analytics": "^2.3.0",
     "@nuxtjs/markdownit": "^1.2.9",
     "@nuxtjs/vuetify": "^1.11.2",
     "contentful": "^7.14.5",
