posts detail margin 調整

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "PORT=3006 nuxt",
+    "dev": "HOST=0.0.0.0 PORT=3006 nuxt",
     "build": "NODE_ENV=production nuxt build",
     "start": "nuxt start",
     "export": "NODE_ENV=production nuxt export",
