--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/vuetify": "^1.11.2",
     "contentful": "^7.14.5",
     "dayjs": "^1.8.29",
+    "markdown-it-vue": "^1.1.6",
     "node-sass": "^4.14.1",
     "nuxt": "^2.13.0",
     "prismjs": "^1.20.0",
