--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "node-sass": "^4.14.1",
     "nuxt": "^2.13.0",
     "prismjs": "^1.20.0",
-    "sass-loader": "^9.0.1"
+    "sass-loader": "^9.0.1",
+    "tmp": "^0.2.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.0.0",
